# NN-Project---Prog3

./: CMakeLists.txt  README.md  main.cpp  run.sh
autograder/: CMakeLists.txt  config.yml
autograder/tests/: feature4_test_utils.h  makefile
autograder/tests/asan_leaksan/: asan_leaksan.cpp  run_test  test.yml
autograder/tests/clang_tidy/: run_test  test.yml
autograder/tests/cppcheck/: cppcheck.cpp  run_test  suppressions.txt  test.yml
autograder/tests/question_1/test_1/: test.yml  test_1.cpp
autograder/tests/question_1/test_2/: test.yml  test_2.cpp
autograder/tests/question_10/test_1/: test.yml  test_1.cpp
autograder/tests/question_10/test_2/: test.yml  test_2.cpp
autograder/tests/question_11/test_1/: test.yml  test_1.cpp
autograder/tests/question_11/test_2/: run_test  test.yml  test_2.cpp
autograder/tests/question_12/test_1/: test.yml  test_1.cpp
autograder/tests/question_12/test_2/: test.yml  test_2.cpp
autograder/tests/question_2/test_1/: test.yml  test_1.cpp
autograder/tests/question_2/test_2/: test.yml  test_2.cpp
autograder/tests/question_3/test_1/: test.yml  test_1.cpp
autograder/tests/question_3/test_2/: test.yml  test_2.cpp
autograder/tests/question_4/test_1/: run_test  test.yml  test_1.cpp
autograder/tests/question_4/test_2/: test.yml  test_2.cpp
docs/: BIBLIOGRAFIA.md  REPORTE_ANALISIS.md  reporte_feature4.csv  reporte_feature4.md
include/utec/algebra/: shape.h  tensor_backend.h  tensor_ops.h
include/utec/apps/: ControllerDemo.h  PatternClassifier.h  SequencePredictor.h
include/utec/io/: dataset_loader.h  model_serializer.h
include/utec/monitoring/: metrics_logger.h  report_exporter.h  training_monitor.h
include/utec/nn/: neural_network.h  nn_activation.h  nn_convolution.h  nn_dense.h  nn_flatten.h  nn_graph.h  nn_interfaces.h  nn_loss.h  nn_ops.h  nn_optimizer.h  nn_pooling.h
src/: generate_zip.sh
tests/epic1/: feature1_eigen_backend_test.cpp  feature2_numeric_ops_test.cpp  feature3_forward_layers_test.cpp  feature4_computational_graph_test.cpp
tests/epic2/: feature1_monitoring_test.cpp  feature2_cnn_application_test.cpp  feature3_serialization_test.cpp  feature4_reporting_test.cpp
(+20 files in other folders)
